# HUVEC_FSS_cSTAR

./: README.md
BMRA/main_code/: sample_r_st.m
bmra-prep/: README.md  pyproject.toml  requirements-dev.txt  tox.ini
bmra-prep/bmra_prep/: __init__.py  input_classes.py
bmra-prep/bmra_prep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bmra-prep/bmra_prep/pathway_activity/: __init__.py  prediction.py  utils.py
bmra-prep/tests/: test_pathway_activity.py
cSTAR_pipeline/: 01_data_prep.ipynb  02_bmra_prep_no_cdk2.ipynb  03_bmra.ipynb
cSTAR_pipeline/00_input/: ALL_DATA_2020.xlsx  LINCS_2020_HUVEC_sig_info.xlsx
cSTAR_pipeline/01_outputs_2020/: R_global_DPDonly_annotated.csv  ic50_annotated.csv  inhib_conc_annotated.csv  metadata.pickle  pert_annotated.csv
cSTAR_pipeline/02_outputs_2020/: R_global_annotated.csv  a_coeffs.csv
cSTAR_pipeline/03_outputs_2020/: A_mean.csv  A_sd.csv  r_mean.csv  r_mean_filt.csv  r_minv.csv  r_minv_filt.csv  r_net.txt  r_net_filt.txt  r_sd.csv
pre-processing/: Analysis_SVM_FSS_KNs.ipynb  Analysis_SVM_FSS_KNs_L1000.ipynb  CTL_PSS_vs_CTL_STAT_DEGs.csv  DPD_vals.csv  DPD_vals_L1000.csv  GSEA_FSS_enrich_scipt.R  HSS_vs_STAT_DEGs.csv  L1000_genes.csv  LSS_vs_STAT_DEGs.csv  OSS_vs_STAT_DEGs.csv  PSS_vs_STAT_DEGs.csv  STVs_SVM.csv  STVs_SVM_L1000.csv  siCDK2_PSS_vs_CTL_STAT_DEGs.csv  siCDK2_STAT_vs_CTL_STAT_DEGs.csv
